namespace ShikigamiDataAuditor.Model
{
	public enum StatScope
	{
		UNKNOWN,
		INITIAL,
		BASE,
		MAX_LEVEL_BASE,
		AWAKENED,
		AWAKENED_BASE,
		AWAKENED_LEVEL_40,
		AWAKENING_BONUS
	}
}
