namespace ShikigamiDataAuditor.Model
{
	public enum StatType
	{
		UNKNOWN,
		ATTACK,
		HP,
		DEFENSE,
		SPEED,
		CRITICAL_RATE,
		CRITICAL_DAMAGE,
		EFFECT_HIT,
		EFFECT_RESIST
	}
}
